--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@
   height: 30px;
   /* background-color: red; */
   border-radius: 40px;
-  
 }
 
 /*скрыть стагдарное изображение чекбокса  */
@@ -15,17 +14,16 @@
   opacity: 0;
 }
 
-
 .switch__slider {
-position: absolute;
-/* cursor: pointer; */
-top: 0;
-left: 0;
-bottom: 0;
-right: 0;
-border-radius: 40px;
+  position: absolute;
+  /* cursor: pointer; */
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  border-radius: 40px;
 
-background-color: rgb(231, 219, 59);
+  background-color: rgb(231, 219, 59);
 }
 
 .switch__slider::before {
@@ -38,20 +36,19 @@ background-color: rgb(231, 219, 59);
   right: 25px;
   width: 25px;
   border-radius: 50px;
-  background-color:rgb(190, 212, 232);
-  transition: .9s;
-  }
+  background-color: rgb(190, 212, 232);
+  transition: 0.9s;
+}
 
-  /* .switch__input:focus + .switch__slider {
+/* .switch__input:focus + .switch__slider {
     box-shadow: 0 0 5 px blue;
   } */
-  .switch__input:checked + .switch__slider {
-    background-color: rgb(102, 102, 102);
-  }
-  .switch__input:checked + .switch__slider::before {
-    transform: translateX(28px);
-  }
-
+.switch__input:checked + .switch__slider {
+  background-color: rgb(102, 102, 102);
+}
+.switch__input:checked + .switch__slider::before {
+  transform: translateX(28px);
+}
 
 .contexTheme.light {
   background-color: rgb(225, 219, 219);
@@ -67,7 +64,7 @@ background-color: rgb(231, 219, 59);
   width: 5em;
   height: 5em;
   margin-bottom: 1em;
-  display: block; 
-  margin-left: auto;  
-  margin-right: auto 
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
